--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -73,7 +73,6 @@
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-md: 28rem;
-    --container-xl: 36rem;
     --container-2xl: 42rem;
     --container-3xl: 48rem;
     --container-4xl: 56rem;
@@ -107,6 +106,7 @@
     --radius-lg: 0.5rem;
     --radius-xl: 0.75rem;
     --radius-2xl: 1rem;
+    --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
     --blur-sm: 8px;
     --blur-lg: 16px;
     --blur-3xl: 64px;
@@ -299,6 +299,9 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
+  .top-1 {
+    top: calc(var(--spacing) * 1);
+  }
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
@@ -370,6 +373,9 @@
   }
   .left-0 {
     left: calc(var(--spacing) * 0);
+  }
+  .left-1 {
+    left: calc(var(--spacing) * 1);
   }
   .left-1\/2 {
     left: calc(1/2 * 100%);
@@ -521,8 +527,14 @@
   .inline-flex {
     display: inline-flex;
   }
+  .table {
+    display: table;
+  }
   .aspect-\[4\/3\] {
     aspect-ratio: 4/3;
+  }
+  .h-0 {
+    height: calc(var(--spacing) * 0);
   }
   .h-0\.5 {
     height: calc(var(--spacing) * 0.5);
@@ -581,6 +593,27 @@
   .h-\[4\.5rem\] {
     height: 4.5rem;
   }
+  .h-\[5\.0rem\] {
+    height: 5.0rem;
+  }
+  .h-\[5rem\] {
+    height: 5rem;
+  }
+  .h-\[6\.0rem\] {
+    height: 6.0rem;
+  }
+  .h-\[8\.5rem\] {
+    height: 8.5rem;
+  }
+  .h-\[10\.0rem\] {
+    height: 10.0rem;
+  }
+  .h-\[10rem\] {
+    height: 10rem;
+  }
+  .h-\[12\.0rem\] {
+    height: 12.0rem;
+  }
   .h-full {
     height: 100%;
   }
@@ -589,6 +622,9 @@
   }
   .min-h-\[80vh\] {
     min-height: 80vh;
+  }
+  .min-h-\[90vh\] {
+    min-height: 90vh;
   }
   .min-h-\[120px\] {
     min-height: 120px;
@@ -680,14 +716,28 @@
   .flex-1 {
     flex: 1;
   }
+  .flex-shrink {
+    flex-shrink: 1;
+  }
   .flex-shrink-0 {
     flex-shrink: 0;
   }
   .flex-grow {
     flex-grow: 1;
   }
+  .border-collapse {
+    border-collapse: collapse;
+  }
+  .-translate-x-1 {
+    --tw-translate-x: calc(var(--spacing) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
   .-translate-x-1\/2 {
     --tw-translate-x: calc(calc(1/2 * 100%) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-1 {
+    --tw-translate-y: calc(var(--spacing) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-y-1\/2 {
@@ -702,6 +752,9 @@
   }
   .cursor-pointer {
     cursor: pointer;
+  }
+  .resize {
+    resize: both;
   }
   .list-inside {
     list-style-position: inside;
@@ -927,11 +980,14 @@
     border-left-style: var(--tw-border-style);
     border-left-width: 4px;
   }
-  .border-\[\#111827\] {
-    border-color: #111827;
-  }
   .border-\[\#111827\]\/10 {
     border-color: color-mix(in oklab, #111827 10%, transparent);
+  }
+  .border-\[\#aaa\] {
+    border-color: #aaa;
+  }
+  .border-\[\#eee\] {
+    border-color: #eee;
   }
   .border-\[\#f3f4f6\]\/50 {
     border-color: color-mix(in oklab, #f3f4f6 50%, transparent);
@@ -1010,6 +1066,9 @@
   }
   .bg-\[\#f59e0b\]\/20 {
     background-color: color-mix(in oklab, #f59e0b 20%, transparent);
+  }
+  .bg-black {
+    background-color: var(--color-black);
   }
   .bg-black\/50 {
     background-color: color-mix(in srgb, #000 50%, transparent);
@@ -1343,9 +1402,6 @@
   .object-cover {
     object-fit: cover;
   }
-  .object-center {
-    object-position: center;
-  }
   .p-2 {
     padding: calc(var(--spacing) * 2);
   }
@@ -1414,6 +1470,9 @@
   }
   .pt-4 {
     padding-top: calc(var(--spacing) * 4);
+  }
+  .pt-5 {
+    padding-top: calc(var(--spacing) * 5);
   }
   .pt-6 {
     padding-top: calc(var(--spacing) * 6);
@@ -1520,6 +1579,9 @@
   .text-\[\#111827\]\/90 {
     color: color-mix(in oklab, #111827 90%, transparent);
   }
+  .text-\[\#aaa\] {
+    color: #aaa;
+  }
   .text-\[\#f3f4f6\] {
     color: #f3f4f6;
   }
@@ -1528,6 +1590,9 @@
   }
   .text-\[\#f59e0b\]\/80 {
     color: color-mix(in oklab, #f59e0b 80%, transparent);
+  }
+  .text-\[\#fff\] {
+    color: #fff;
   }
   .text-amber-400 {
     color: var(--color-amber-400);
@@ -1676,10 +1741,22 @@
     --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
+  .shadow-orange-700 {
+    --tw-shadow-color: oklch(55.3% 0.195 38.402);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-shadow-color: color-mix(in oklab, var(--color-orange-700) var(--tw-shadow-alpha), transparent);
+    }
+  }
   .shadow-orange-700\/20 {
     --tw-shadow-color: color-mix(in srgb, oklch(55.3% 0.195 38.402) 20%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
       --tw-shadow-color: color-mix(in oklab, color-mix(in oklab, var(--color-orange-700) 20%, transparent) var(--tw-shadow-alpha), transparent);
+    }
+  }
+  .shadow-yellow-700 {
+    --tw-shadow-color: oklch(55.4% 0.135 66.442);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-shadow-color: color-mix(in oklab, var(--color-yellow-700) var(--tw-shadow-alpha), transparent);
     }
   }
   .shadow-yellow-700\/20 {
@@ -1694,8 +1771,15 @@
   .ring-indigo-500 {
     --tw-ring-color: var(--color-indigo-500);
   }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+  }
   .blur-3xl {
     --tw-blur: blur(var(--blur-3xl));
+    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+  }
+  .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
   .backdrop-blur-lg {
@@ -1705,6 +1789,10 @@
   }
   .backdrop-blur-sm {
     --tw-backdrop-blur: blur(var(--blur-sm));
+    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+  }
+  .backdrop-filter {
     -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
     backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
@@ -1731,6 +1819,10 @@
   .duration-300 {
     --tw-duration: 300ms;
     transition-duration: 300ms;
+  }
+  .ease-in-out {
+    --tw-ease: var(--ease-in-out);
+    transition-timing-function: var(--ease-in-out);
   }
   .outline-none {
     --tw-outline-style: none;
@@ -1782,6 +1874,13 @@
     &:hover {
       @media (hover: hover) {
         background-color: color-mix(in oklab, #111827 10%, transparent);
+      }
+    }
+  }
+  .hover\:bg-\[\#e68a00\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #e68a00;
       }
     }
   }
@@ -1862,10 +1961,24 @@
       }
     }
   }
-  .hover\:text-\[\#f3f4f6\] {
+  .hover\:text-\[\#\] {
     &:hover {
       @media (hover: hover) {
-        color: #f3f4f6;
+        color: #;
+      }
+    }
+  }
+  .hover\:text-\[\#aaa\] {
+    &:hover {
+      @media (hover: hover) {
+        color: #aaa;
+      }
+    }
+  }
+  .hover\:text-\[\#eee\] {
+    &:hover {
+      @media (hover: hover) {
+        color: #eee;
       }
     }
   }
@@ -1873,6 +1986,13 @@
     &:hover {
       @media (hover: hover) {
         color: #f59e0b;
+      }
+    }
+  }
+  .hover\:text-\[\#fff\] {
+    &:hover {
+      @media (hover: hover) {
+        color: #fff;
       }
     }
   }
@@ -2132,6 +2252,16 @@
       grid-column: span 2 / span 2;
     }
   }
+  .lg\:h-\[5\.0rem\] {
+    @media (width >= 64rem) {
+      height: 5.0rem;
+    }
+  }
+  .lg\:h-\[6\.0rem\] {
+    @media (width >= 64rem) {
+      height: 6.0rem;
+    }
+  }
   .lg\:grid-cols-2 {
     @media (width >= 64rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -2151,12 +2281,6 @@
     @media (width >= 64rem) {
       font-size: var(--text-2xl);
       line-height: var(--tw-leading, var(--text-2xl--line-height));
-    }
-  }
-  .lg\:text-4xl {
-    @media (width >= 64rem) {
-      font-size: var(--text-4xl);
-      line-height: var(--tw-leading, var(--text-4xl--line-height));
     }
   }
   .lg\:text-5xl {
@@ -2348,6 +2472,11 @@ body {
   inherits: false;
   initial-value: 0 0 #0000;
 }
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
 @property --tw-blur {
   syntax: "*";
   inherits: false;
@@ -2441,6 +2570,10 @@ body {
   syntax: "*";
   inherits: false;
 }
+@property --tw-ease {
+  syntax: "*";
+  inherits: false;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -2481,6 +2614,7 @@ body {
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
+      --tw-outline-style: solid;
       --tw-blur: initial;
       --tw-brightness: initial;
       --tw-contrast: initial;
@@ -2504,6 +2638,7 @@ body {
       --tw-backdrop-saturate: initial;
       --tw-backdrop-sepia: initial;
       --tw-duration: initial;
+      --tw-ease: initial;
     }
   }
 }
